--- a/sqld/오답노트.md
+++ b/sqld/오답노트.md
@@ -1,5 +1,102 @@
 1. 다음 설명 중 데이터 모델링이 필요한 주요 이유로 가장 부적절한 것은?
+
    - 업무정보를 구성하는 기초가 되는 정보들에 대해 일정한 표기법에 의해 표현한다.
    - 분석된 모델을 가지고 데이터베이스를 생성하여 개발 및 데이터 관리에 사용하기 위한 것이다.
    - 데이터모델링 자체로서 업무의 흐름을설명하고 분석하는 부분에 의미를 가지고 있다.
-   - 데이터베이스를 구축하기 위한 용도를 위해 데이터 모델링을 수행하고 업무에 대한 설명은 별도의 표기법을 이용한다 -> 별도의 표기법이 아니라 같이 사용
+   - *데이터베이스를 구축하기 위한 용도를 위해 데이터 모델링을 수행하고 업무에 대한 설명은 별도의 표기법을 이용한다* -> 별도의 표기법이 아니라 같이 사용
+
+2. 다음 중 데이터 모델링을 할 때 유의해야 할 사항으로 가장 부적절한 것은?
+
+   - 여러 장소의 데이터베이스에 같은 정보를 저장하지 않도록 하여 중복성을 최소화 한다.
+   - 데이터의 정의를 데이터의 사용 프로세스와 분리하여 유연성을 높인다.
+   - *사용자가 처리하는 프로세스나 장표 등에 따라 매핑이 될 수 있도록 프로그램과 테이블간의 연계성을 높인다* -> 프로그램과 테이블간의 연계성이 낮아야함..
+   - 데이터간의 상호 연관관계를 명확하게 정의하여 일관성있게 데이터가 유지되도록 한다.
+
+3. 다음중 ANSI-SPARC에서 정의한 3단계구조에서 아래 내용이 설명하는 스키마 구조로 가장 적절한 것은?
+
+   > ' 모든 사용자 관점을 **통합한** **조직 전체 관점**의 통합적 표현 '
+   >
+   > ' 모든 응용시스템들이나 사용자들이 필요로 하는 데이터를 통합한 조직 전체의 DB를 기술한 것으로 DB에 저장되는 데이터와 그들간의 관계를 표현하는 스키마 '
+
+   - 개념 스키마 (외부 스키마- 개념 스키마- 내부 스키마)
+
+4. 다음 중 ERD에 대한 설명으로 가장 부적절한 것은?
+
+   - 1976 피터첸에 의해 ERD라는 표기법이 만들어졌다.
+   - 일반적으로 ERD를 작성하는 방법은 엔터티 도출-> 엔터티 배치-> 관계 설정->관계명 기술의 흐름으로 작업을 진행한다.
+   - 관계의 명칭은 관계 표현에 있어서 매우 중요한 부분에 해당한다.
+   - *가장 중요한 엔터티를 오른쪽 상단에 배치하고 추가 발생되는 엔터티들을 왼쪽 편과 하단에 배치하는 것이 원칙이다.* ->  중요한 엔티티는 왼쪽 상단에 두는 것이 낫다.
+
+5. 다음 중 엔터티의 특징으로 가장 부적절한 것은?
+
+   - 속성이 없는 엔터티는 있을 수 없다. 엔터티는 반드시 속성을 가져야 한다.
+   - 엔터티는 다른 엔터티와 관계가 있을 수 밖에 없다. 단, 통계성 엔터티나 코드성 엔터티의 경우 관계를 생략할 수 있다.
+   - *객체지향의 디자인 패턴에는 싱글턴 패턴이 있어 하나의 인스턴스를 가지는 것만으로도 충분한 의미를 부여할 수 있다.* -> 두 개의 인스턴스가 필요
+   - 데이터로서 존재하지만 업무에서 필요로 하지 않으면 해당 업무의 엔터티로 성립될 수 없다.
+
+6. 다음 중 다른 엔터티로부터 주식별자를 상속받지 않고 자신의 고유한 주식별자를 가지며 사원,부서,고객,상품,자재 등이 예가 될 수 있는 엔터티로 가장 적절한 것은?
+
+   - 기본 엔터티 - 기본 엔터티란 그 업무에 원래 존재하는 정보로서 다른 엔터티와의 관계에 의해 생성되지 않고 독립적으로 생성이 가능하고 자신은 타 엔터티의 부모의 역할을 하게 된다.
+
+7. 업무에서 필요로 하는 인스턴스에서 관리하고자 하는 의미상 더 이상 분리되지 않는 최소의 데이터 단위를 무엇이라고 하는가? 
+
+   - 속성 , 어트리뷰트
+
+8. 다음 중 데이터모델링을 할 때 속성의 명칭을 부여하는 방법으로 가장 부적절한 것은?
+
+   - 속성의 이름에 약어를 사용할 경우 그 의미를 명확하게 이해할 수 없고, 혼돈을 초래하여 커뮤니케이션의 혼란을 야기할 수 있으므로 지나친 약어 사용은 가급적 제한하도록 한다.
+   - 속성의 이름에는 서술식 용어는 사용하지 않도록 한다.
+   - 직원 엔터티의 이름, 고객 엔터티의 이름과 같이 각 엔터티별로 동일한 속성명을 사용하여 데이터모델의 일관성을 가져가는 것이 좋다. -> 엔터티 별로 다르게 하는 것이 좋다.
+   - 데이터모델링 대상에서 사용하는 용어도 있고 외부에서 사용하는 용어도 있어 중복이 있을 때, 가급적 해당 업무에서 자주 사용하는 이름을 이용하도록 한다.
+
+9. 다음 중 두개의 엔터티 사이에 정의한 관계를 체크하는 사항으로 부적절한 것은?
+
+   - 두 개의 엔터티 사이에 관심 있는 연관규칙이 존재하는가?
+   - 두 개의 엔터티 사이에 정보의 조합이 발생되는가?
+   - 업무 기술서, 장표에 관계연결을 가능하게 하는 명사가 있는가? -> 동사
+   - 업무 기술서, 장표에 관계연결에 대한 규칙이 서술되어 있는가?
+
+10. 다음 중 아래에서 주식별자를 지정할 떄 고려해야 할 사항은?
+
+    - 주식별자에 의해 엔터티 내의 모든 인스턴스들이 유일하게 구분되어야 한다.
+    - 주식별자를 구성하는 속성의 수는 유일성을 만족하는 최소의 수가 되어야 한다.
+    - 지정된 주식별자의 값은 자주 변하지 않는 것이어야 한다.
+    - 주식별자가 지정이 되면 반드시 값이 들어와야 한다.
+
+11. 프로젝트를 전개할 때는 식별자관계와 비식별자관계를 선택하여 연결해야하는 높은 수준의 데이터모델링 기술이 필요하다. 다음중 비식별자관계를 선택하는 기준으로 가장 부적절한 것은?
+
+    - 관계이 강약을 분석하여 상호간에 연관성이 약할 경우 비식별자 관계를 고려한다.
+    - 자식 테이블에서 독립적인 프라이머리키의 구조를 가지기 원할 때 비식별자 관계를 고려한다.
+    - 모든 관계가 식별자 관계로 연결되면 SQL where절에서 비교하는 항목이 증가되어 조인에 참여하는 테이블에 따라 SQL문장이 길어져 SQL문의 복잡성이 증가되는 것을 방지하기 위해 비식별자관계를 고려한다.
+    - 부모엔터티의 주식별자를 자식엔터티에서 받아 손자엔터티까지 계속 흘려보내기 위해 비식별자관계를 고려한다. -> 식별자 관계
+
+12. 비식별자 관계로 연결하는 것을 고려하는 경우로 부적절한 것은?
+
+    - 부모엔터티에 참조값이 없어도 자식엔터티의 인스턴스가 생성될 수 있는 경우
+    - 부모엔터티의 인스턴스가 자식 엔터티와 같이 소멸되는 경우
+    - 여러 개의 엔터티를 하나로 통합하면서 각각의 엔터티가 갖고 있던 여러 개의 개별 관계가 통합되는 경우
+    - 자식쪽 엔터티의 주식별자를 부모엔터티와는 별도로 생성하는 것이 더 유리하다고 판단하는 경우
+
+13. 다음 중 성능 데이터모델링에 대한 설명으로 가장 부적절한 것은?
+
+    - *성능이 저하된 결과를 대상으로 데이터모델 보다는 문제발생 시점의 sql 중심으로 집중하여 튜닝을 한다. ->* 무관한 내용
+    - 데이터의 증가가 빠를수록 성능저하에 따른 성능개선비용은 증가한다.
+    - 데이터모델은 성능을 튜닝하면서 변경이 될 수 있는 특징이 있다.
+    - 분석/설계 단계에서 성능을 고려한 데이터모델링을 수행할 경우 성능 저하에 따른 Rework 비용을 최소화할 수 있는 기회를 가지게 된다. 
+
+14. 다음 중 성능데이터 모델링을 할 때 고려사항으로 가장 부적절한 것은?
+
+    - 데이터 모델링의 정규화는 항상 조회 성능저하를 나타내므로 반정규화 관점에서만 성능을 고려하여 설계하도록 한다. -> 항상 x
+    - 용량산정은 전체적인 데이터베이스에 발생되는 트랜잭션의 유형과 양을 분석하는 자료가 되므로 성능 데이터 모델링을 할 때 중요한 작업이다.
+    - 물리적인 데이터 모델링을 할 때 PK/FK의 컬럼의 순서조정, FK인덱스 생성 등은 성능 향상을 위한 데이터 모델링 작업에 중요한 요소가 된다.
+    - 이력데이터는 시간에 따라 반복적으로 발생이 되기 때문에 대량 데이터일 가능성이 높아 특별히 성능을 고려하여 칼럼 등을 추가하도록 설계해야 한다.
+
+15. 다음 중 칼람수가 많은 테이블에 대한 설명으로 가장 적절한 것은?
+
+    - 한 테이블에 많은 컬럼을 가지고 있으면 조인이 발생되지 않아 여러개 테이블일 때에 비해 성능이 항상 우수하다고 할 수 있다.
+    - 로우체이닝이 발생할 정도로 한 테이블에 많은 칼럼들이 존재할 경우 조회성능저하가 발생할 수 있다. 한 테이블 내에서 컬럼의 위치를 조정하면 디스크 I/O가 줄어들어 조회 성능을 향상시킬 수 있다.
+    - 로우체이닝이 발생할 정도로 한 테이블에 많은 컬럼들이 존재할 경우 조회성능저하가 발생할 수 있다. 트랜잭션이 접근하는 컬럼 유형을 분석하여 1:1로 테이블을 분리하면 디스크 I/O가 줄어들어 조회 성능을 향상시킬 수 있다.
+    - 로우체이닝 발생할 정도로... 분리할 경우 조인으로 인한 성능 저하가 더 심하게 나타날 수 있으므로 감수하는 것이 좋다. 
+
+
+
