--- a/m42/분기를없애자.md
+++ b/m42/분기를없애자.md
@@ -1,19 +1,38 @@
-# TIL
+##### 배송기사그룹, 배송기사관리, 배송그룹등록
 
-1. 서비스 함수 짤 때 1대 1 혹은 1대 0인 경우 innerjoin 하기
+이 세가지가 배송의뢰사, 포장사, 배송사에서 거의 같은 뷰를 쓰고있기 때문에, 이전에 commonHook 함수를 작성했던 적이 있었다. 
 
-   1. `request`와 `requestdecline`, `requestcompanybilling`, `requestdeliveryservice`,`requestcollectionpoint` 는 1대 1관계 혹은 1대 0관계
+원래 뷰 함수 안에 hook을 만들어서 사용했다. 이게 어떻게 된 구조냐면,
 
-   ```sql
-   select 
-    r.request_rowid,r.client_rowid,r.company_rowid,r.request_rowid,r.request_id,r.estdeliverystartdate,r.estdeliveryenddate,r.memo,r.regdate,r.editdate
-    ifnull(rd.reason,'') reason,ifnull(rd.regdate,utc_timestamp()) reasonRegdate,ifnull(rcb.companybilling_r,'') companyBillingR,ifnull(rcb.id,'') companyBillingId,ifnull(rcb.memo,''),
-    ifnull(rds._deliveryservice_rowid,0),ifnull(rcp.collectionpoint_r,0),ifnull(rcp.name,''),ifnull(rcp.addr,''),ifnull(rcp.lat,''),ifnull(rcp.lat,''),ifnull(rcp.lng)
-   ,from request r 
-   left join requestdecline rd 
-   left join requestcompanybilling rcb
-   left join requestdeliveryservice rds
-   left join requestcollectionpoint rcp
-   ```
+우리가 코드 짤 때, 일단 뷰함수를 만든다 -> 페이지에서 사용
 
-![Untitled](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/6cae15dc-6352-40f0-8cae-aba903c279b1/Untitled.png)
+```
+suspend fun DriverManagementView() = eView(factory) { rootView ->
+	
+}
+```
+
+
+
+위에서 만든 뷰에서 훅 함수를 만든다.
+
+```
+rootView.addEntityHook(EntInit::class, object:eEntityHook<HTMLElement, EntInit>{
+        override suspend fun invoke(view:eView<HTMLElement>, entity: EntInit){
+            //
+        }
+    })
+```
+
+요건 따져보면
+
+```
+eView(factory).addEntityHook() {
+
+}
+```
+
+
+
+
+
