--- a/m42/분기를없애자.md
+++ b/m42/분기를없애자.md
@@ -36,3 +36,7 @@ eView(factory).addEntityHook() {
 
 
 
+![image-20220217221833286](C:\Users\ohmje\AppData\Roaming\Typora\typora-user-images\image-20220217221833286.png)
+
+![image-20220217221943200](C:\Users\ohmje\AppData\Roaming\Typora\typora-user-images\image-20220217221943200.png)
+
